Added checkstyle, jacoco and fixed pom.xml